fix: improve search bar spacing

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ button{
 
 .search-bar{
     display: grid;
-    grid-template-columns: 5fr 1fr;
+    grid-auto-flow: column;
 }
 
 input{
